# VoxMonitor

./: .gitignore  CHANGES.txt  README.md  TRAINING_GUIDE.md  pyproject.toml  requirements.txt
config/: config.yaml
scripts/: export_onnx.py  sanity_check.py
src/voxmonitor/: __init__.py  cli.py  data.py  export_callback.py  lightning.py  model.py  registry.py  train.py  train_classifier.py  train_pl.py  utils.py  zenodo_download.py
tests/: test_integration.py  test_lightning_module.py
